[build-system]
requires = ["setuptools>=64", "cffi>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scatti"
version = "0.2.0"
description = "Python bindings for scatti — jerk-limited real-time trajectory generation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["cffi>=1.0"]

[project.urls]
Homepage = "https://github.com/mika4128/scatti"

[tool.setuptools.packages.find]
include = ["scatti*"]
