[package]
name = "scatti"
version = "0.2.0"
edition = "2021"
description = "Rust bindings for scatti — jerk-limited real-time trajectory generation"
license = "MIT"
links = "scatti"

[lib]
name = "scatti"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.71"
cc = "1"

[[example]]
name = "position"
path = "examples/01_position.rs"

[[example]]
name = "velocity"
path = "examples/05_velocity.rs"
